LDEV-4054: Updating missing labels and Greek

--- a/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 12 01:27:07 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:43:22 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -456,6 +456,7 @@ email.notifications.archived.messages.list  =\u039a\u03b1\u03c4\u03ac\u03bb\u03b
 email.notifications.archived.messages.list.sent.date  =\u03a3\u03c4\u03ac\u03bb\u03b8\u03b7\u03ba\u03b5 \u03c3\u03c4\u03b9\u03c2
 email.notifications.archived.messages.list.sent.count  =\u0391\u03c0\u03bf\u03c3\u03c4\u03ad\u03bb\u03bb\u03bf\u03bd\u03c4\u03b1\u03b9 \u03c3\u03b5
 email.notifications.archived.messages.list.learners  =\u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9
+label.gate.gate.open.user  =\u03b1\u03c0\u03cc {0}
 
 
-#======= End labels: Exported 450 labels for el GR =====
+#======= End labels: Exported 451 labels for el GR =====
