--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:32:54 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:43:20 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -14,7 +14,7 @@ label.schedule.gate.title  =Schedule gate
 label.schedule.gate.open.message  =Schedule gate will be opened at:
 label.schedule.gate.close.message  =Schedule gate will be closed at:
 label.gate.you.open.message  =You may open the gate for the whole class
-label.gate.gate.open  =Gate has been opened
+label.gate.gate.open  =Gate was opened
 label.gate.open  =Open
 label.gate.closed  =Closed
 label.gate.waiting.learners  ={0} out of {1} are waiting in front of the gate.
@@ -456,6 +456,7 @@ email.notifications.archived.messages.list  =List of archived emails
 email.notifications.archived.messages.list.sent.date  =Sent on
 email.notifications.archived.messages.list.sent.count  =Sent to
 email.notifications.archived.messages.list.learners  =learners
+label.gate.gate.open.user  =by {0}
 
 
-#======= End labels: Exported 450 labels for en AU =====
+#======= End labels: Exported 451 labels for en AU =====
