--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:01:31 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:55:37 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -22,7 +22,7 @@ label.authoring.basic.question.text  =Question text
 label.authoring.basic.default.question.grade  =Default question grade
 label.authoring.basic.penalty.factor  =Penalty factor
 label.authoring.basic.general.feedback  =General feedback
-label.authoring.basic.shuffle.the.choices  =Shuffle the choices?
+label.authoring.basic.shuffle.the.choices  =Shuffle answers?
 label.authoring.basic.add.question  =Add question
 label.authoring.basic.question.list.title  =Question list
 label.authoring.basic.list.header.type  =Type
@@ -330,6 +330,13 @@ label.print  =Print
 label.excel.export  =Excel export
 label.teams  =Teams
 label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
+label.authoring.advance.disclose.answers  =Disclose learner's and other groups' answers in monitor
+label.learning.summary.other.team.answers  =Other teams' answers
+label.learning.summary.selected.by  =Selected by:
+label.disclose.correct.answers  =Disclose correct answers
+label.disclose.groups.answers  =Disclose groups' answers
+label.disclose.all.correct.answers  =Disclose all correct answers
+label.disclose.all.groups.answers  =Disclose all groups' answers
 
 
-#======= End labels: Exported 324 labels for en AU =====
+#======= End labels: Exported 331 labels for en AU =====
