--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:55:40 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:40:22 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -607,7 +607,7 @@ authoring.fla.page.prop.grouping.type.random  =Random
 authoring.fla.page.prop.grouping.type.monitor  =Choose in Monitor
 authoring.fla.page.prop.grouping.type.learner  =Learner's choice
 authoring.fla.page.prop.groups.number  =Number of groups:
-authoring.fla.page.prop.groups.learners  =Number of learners:
+authoring.fla.page.prop.groups.learners  =Or learners per group:
 authoring.fla.page.prop.groups.equal  =Equal group sizes?
 authoring.fla.page.prop.groups.view.learners  =View learners before selection?
 authoring.fla.page.prop.groups.name  =Name Groups
@@ -761,8 +761,13 @@ authoring.label.peerrevice.allow.comments  =Allow learners to comment on other l
 authoring.label.peerrevice.min.words.in.comments  =Minimum number of words in a comment
 authoring.create.criteria  =Create Criteria
 audit.design.created  =Learning design "{0}" ({1}) created by {2} ({3})
-authoring.fla.save.successful.check.grouping  =Your design is valid and has been saved.\\nYou may want to make all activities grouped, please verify.
+authoring.fla.save.successful.check.grouping  =Your design is valid and has been saved.\\nIf this is a TBL sequence, you may want to make following activities grouped:
 authoring.fla.weights.none  =No activities with weightable gradebook output
+audit.live.edit.start  =Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) started by {3} ({4})
+audit.live.edit.end  =Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) completed by {3} ({4})
+label.post.anonomously  =Post anonymously
+label.anonymous  =Anonymous
+label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 
 #====== Templates
 authoring.msg.close.cancel.save=Do you want to close this window without saving?
@@ -806,6 +811,11 @@ button.return.to.template.list=Go back to Template list
 authoring.error.content.id=Content ID is missing
 authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
 authoring.error.question.must.have.answer.num=Question {0} must have at least one answer.
+authoring.error.application.exercise.must.have.answer.num=Application Exercise {0} must have at least one answer.
+authoring.error.application.exercise.must.have.100.percent=Application Exercise {0} must have at least one answer worth 100%.
+authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.
+authoring.label.grade=Grade
+authoring.label.none=None
 
 #=================== Specific to Team Based Learning (TBL) =========================#
 authoring.tbl.template.title=Team Based Learning
@@ -813,6 +823,7 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
+audit.live.edit.start=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) started by {3} ({4})
+audit.live.edit.end=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) completed by {3} ({4})
 
-
-#======= End labels: Exported 757 labels for en AU =====
+#======= End labels: Exported 762 labels for en AU =====
