--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:12:59 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:48:47 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -129,7 +129,7 @@ label.learning.resubmit  =\u0395\u03c0\u03b1\u03bd\u03b1-\u03c5\u03c0\u03bf\u03b
 label.learning.summary.started.on  =\u0386\u03c1\u03c7\u03b9\u03c3\u03b5 \u03c3\u03c4\u03b9\u03c2
 label.learning.summary.completed.on  =\u039f\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03b8\u03b7\u03ba\u03b5 \u03c3\u03c4\u03b9\u03c2
 label.learning.summary.time.taken  =\u03a7\u03c1\u03bf\u03bd\u03b9\u03ba\u03cc \u03b4\u03b9\u03ac\u03c3\u03c4\u03b7\u03bc\u03b1
-label.learning.summary.hours  =\u038f\u03c1\u03b1(\u03b5\u03c2)
+label.learning.summary.hours  = \u03ce\u03c1\u03b1/\u03b5\u03c2
 label.learning.summary.minutes  =\u039b\u03b5\u03c0\u03c4\u03ac
 label.learning.summary.grade  =\u0392\u03b1\u03b8\u03bc\u03cc\u03c2
 label.learning.summary.out.of.maximum  =\u03ad\u03be\u03c9 \u03b1\u03c0\u03cc \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03c4\u03c9\u03bd
