--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:39 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:33:13 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -249,8 +249,10 @@ admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
 admin.button.save  =Save
 admin.keep.learner.content  =Don't delete postings when learners are removed from the activity.
-label.authoring.advance.enable.anonymous.posts =Enable Anonymous Posts
-label.post.anonomously=Post anonymously
-label.anonymous=Anonymous
-label.anonymous.tooltip=Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name in monitoring.
-#======= End labels: Exported 243 labels for en AU =====
+label.authoring.advance.enable.anonymous.posts  =Enable anonymous posts
+label.post.anonomously  =Post anonymously
+label.anonymous  =Anonymous
+label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
+
+
+#======= End labels: Exported 247 labels for en AU =====
