--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:51:36 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:46:37 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -122,6 +122,7 @@ label.editing.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 basic.forceResponse  =\u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7;
 message.learner.blank.alertforceResponse  =\u0397 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9
+advanced.enable.anonymous.posts  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03b1\u03bd\u03ce\u03bd\u03c5\u03bc\u03c9\u03bd \u03b1\u03bd\u03b1\u03c1\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
 
 
-#======= End labels: Exported 116 labels for el GR =====
+#======= End labels: Exported 117 labels for el GR =====
