--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:26:00 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:46:38 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -122,6 +122,7 @@ label.editing.options  =Editing options
 label.activity.completion  =End of activity
 basic.forceResponse  =Response required?
 message.learner.blank.alertforceResponse  =Response is required
+advanced.enable.anonymous.posts  =Enable anonymous posts
 
 
-#======= End labels: Exported 116 labels for en AU =====
+#======= End labels: Exported 117 labels for en AU =====
