LDEV-4454 Adding labels for kumalive polls in i18n

--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:40:30 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 20:31:30 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -17,7 +17,7 @@ message.activity.parallel.partialComplete  =You have to complete the other task 
 message.activity.parallel.noFrames  =Your browser does not handle frames!
 message.activity.options.noActivitySelected  =Please select an activity from the list
 message.activity.options.activityCount  =You must complete at least {0} out of {1} activities to finish.
-message.activity.options.note  =Note: Once you finish any of the above activities you can revisit them by using the progress bar or by clicking or by clicking on the activity name shown above. 
+message.activity.options.note  =Note: Once you finish any of the above activities you can revisit them by using the progress bar or by clicking or by clicking on the activity name shown above.
 label.activity.options.choose  =Choose
 label.synch.gate.title  =Synch gate
 label.synch.gate.message  =You have stopped at a gate. You cannot continue until all of your group/class reach this point.
@@ -124,7 +124,7 @@ label.kumalive.wait.start  =Wait for a teacher to start Kumalive
 label.kumalive.name.enter  =Enter a name for a new Kumalive
 button.kumalive.create  =Create
 button.kumalive.finish.kumalive  =Finish Kumalive
-button.kumalive.ask  =Ask question
+button.kumalive.ask  =Ask a question
 button.kumalive.finish.question  =Finish question
 button.kumalive.raise  =Raise hand
 button.kumalive.putdown  =Put hand down
@@ -155,6 +155,33 @@ message.kumalive.report.load.error  =Error while loading data for report
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
 button.kumalive.report.export.selected  =Export selected
+button.kumalive.poll  =Poll
+button.kumalive.poll.create  =Create poll
+label.kumalive.poll.question  =Question (optional)
+label.kumalive.poll.question.tip  =for example: Why is the sky blue?
+label.kumalive.poll.answer  =Answers
+label.kumalive.poll.answer.true  =True
+label.kumalive.poll.answer.false  =False
+label.kumalive.poll.answer.positive  =Positive
+label.kumalive.poll.answer.negative  =Negative
+label.kumalive.poll.answer.yes  =Yes
+label.kumalive.poll.answer.no  =No
+label.kumalive.poll.answer.custom  =Custom...
+label.kumalive.poll.answer.custom.tip  ={Put} {each} {answer} {in} {curly} {brackets}
+label.kumalive.poll.answer.custom.error.syntax  =Custom answer syntax is incorrect. Example: {first answer} {second answer}
+label.kumalive.poll.answer.custom.error.count  =Maximum 9 answers allowed
+button.kumalive.poll.start  =Ask now!
+button.kumalive.poll.vote  =Vote
+button.kumalive.poll.finish  =Finish poll
+message.kumalive.poll.finish.confirm  =Are you sure you want to finish this poll and prevent learners from voting?
+button.kumalive.poll.close  =Close poll
+button.kumalive.poll.release.votes  =Show votes to learners
+message.kumalive.poll.release.votes.confirm  =Are you sure you want to show poll results to students who voted?
+button.kumalive.poll.release.voters  =Show votes & voters to learners
+message.kumalive.poll.release.voters.confirm  =Are you sure you want to show poll results and voters' names to students?
+label.kumalive.poll.missing.voters  =Not voted
+label.kumalive.poll.results  =Results
+label.kumalive.poll.votes.total  =Total votes
 
 
-#======= End labels: Exported 151 labels for en AU =====
+#======= End labels: Exported 176 labels for en AU =====
