--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -141,11 +141,11 @@ label.attempt.count  =Attempt count:
 label.final.attempt  =Final attempt:
 output.desc.learner.mark  =Learner's total mark
 output.desc.learner.all.correct  =Are learner's answers all correct?
-label.displayAnswers  =Display correct answers and score after last question
-label.monitoring.yesDisplayAnswers  =Learners are able to see the answers for all questions.
-label.monitoring.noDisplayAnswers1  =Learners are not able to see the answers for the questions
+label.displayAnswers  =Display correct answers, score and feedback after last question
+label.monitoring.yesDisplayAnswers  =Learners are able to see the answers for the questions.
+label.monitoring.noDisplayAnswers1  =Learners are not able to see answers, scores or feedback for the questions
 label.monitoring.noDisplayAnswers2  =Do you want to allow learners to see the answers now?
-button.monitoring.noDisplayAnswers  =Yes
+button.monitoring.yes  =Yes
 output.desc.learner.all.correct.true  =All correct
 output.desc.learner.all.correct.false  =Not all correct
 label.monitoring.downloadMarks.button  =Export marks
