LDEV-4582 Able to add letter prefix to Assessment MCQ Answers

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -338,5 +338,6 @@ label.disclose.groups.answers  =Disclose groups' answers
 label.disclose.all.correct.answers  =Disclose all correct answers
 label.disclose.all.groups.answers  =Disclose all groups' answers
 
+label.prefix.sequential.letters.for.each.answer  =Prefix sequential letters for each answer
 
 #======= End labels: Exported 331 labels for en AU =====
