LDEV-4054: Updating Greek and English

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:55:37 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed May 16 15:40:38 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -337,6 +337,7 @@ label.disclose.correct.answers  =Disclose correct answers
 label.disclose.groups.answers  =Disclose groups' answers
 label.disclose.all.correct.answers  =Disclose all correct answers
 label.disclose.all.groups.answers  =Disclose all groups' answers
+label.prefix.sequential.letters.for.each.answer  =Prefix sequential letters for each answer
 
 
-#======= End labels: Exported 331 labels for en AU =====
+#======= End labels: Exported 332 labels for en AU =====
