LDEV-4587 Add new assessment output type

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -179,6 +179,7 @@ output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts
 output.user.score.for.question  =Score for the question:
+output.ordered.answers.for.question  =Ordered answers for the question:
 error.form.validation.error  =You have 1 error in a form. It has been highlighted
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 error.form.validation.hundred.score  =One of the answers should have a grade of 100% so it is possible to get full marks for this question.
